hphp/test/slow/packages/requirepackage/parse_errors/parse_errors6.php.inc
<?hh

<<__SoftRequirePackage('foo', 'bar')>>
function fpe() : void {}
